--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar  color="primary">
+  <ion-navbar hideBackButton="true" color="primary">
     <ion-buttons end>
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
@@ -18,7 +18,7 @@
     <div class="content-main">
 
     <img class="logo" src="assets/imgs/matimms_logo.png"  >
-     <button class="btn-journey" block round ion-button>START YOUR JOURNEY</button>
+     <button class="btn-journey" block round ion-button (click)="changePage()">{{ button_text }}</button>
     </div>
 
 
