Worked On My Journey Page

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,17 +11,12 @@
 
 <ion-content class="main" >
 
-  <div class="temp">
-    
-  </div>
 
-    <div class="content-main">
-
-    <img class="logo" src="assets/imgs/matimms_logo.png"  >
-     <button class="btn-journey" block round ion-button (click)="changePage()">{{ button_text }}</button>
-    </div>
-
-
+  <ion-row class="content-main">
+   
+   
+  </ion-row>  
+  <button class="btn-journey" block round ion-button (click)="changePage()">{{ button_text }}</button>
    
   
 
