--- a/src/pages/myjourney/myjourney.html
+++ b/src/pages/myjourney/myjourney.html
@@ -46,7 +46,7 @@
 </div>
 
 
-<div class="middle_div1" *ngFor="let chapter of chapterList; let i = index"  > 
+<div class="middle_div1" *ngFor="let chapter of chapterList; "  > 
 
        
 
@@ -54,7 +54,7 @@
           <div class="cont_data2" >
               <p class="dynamic_header">{{chapter.title.rendered}}</p>
               <br><br><br><br>
-              <button ion-button color="secondary" class="dynamic_button"  color="{{colors[i]}}">LET'S GO</button>
+              <button ion-button color="secondary" class="dynamic_button" (click)="openSlider(chapter.id,chapter.title.rendered)"  [ngStyle]="{'background-color' : chapter.meta_color.light}">LET'S GO</button>
           </div>    
           
         </div>
