Worked On Sub-Post

--- a/src/pages/myjourney/myjourney.html
+++ b/src/pages/myjourney/myjourney.html
@@ -54,7 +54,7 @@
           <div class="cont_data2" >
               <p class="dynamic_header">{{chapter.title.rendered}}</p>
               <br><br><br><br>
-              <button ion-button color="secondary" class="dynamic_button" (click)="openSlider(chapter.id,chapter.title.rendered)"  [ngStyle]="{'background-color' : chapter.meta_color.light}">LET'S GO</button>
+              <button ion-button color="secondary" class="dynamic_button" (click)="openSlider(chapter.id,chapter.title.rendered,chapter.meta_color.light)"  [ngStyle]="{'background-color' : chapter.meta_color.light}">LET'S GO</button>
           </div>    
           
         </div>
