--- a/src/pages/post-detail/post-detail.html
+++ b/src/pages/post-detail/post-detail.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar color="primary">
+  <ion-navbar class="temp" [ngStyle]="{'background-color' : parent_color}">
     <ion-buttons end>
         <button ion-button menuToggle >
           <ion-icon name="menu"></ion-icon>
