--- a/src/pages/setduedate/setduedate.html
+++ b/src/pages/setduedate/setduedate.html
@@ -17,10 +17,10 @@
 
 
 <ion-content padding>
-
+                                           
   <ion-item>
     <ion-label>Due Date</ion-label>
-    <ion-datetime displayFormat="DD/MM/YYYY" max="2050-10-31" pickerFormat="DD MM YYYY" [(ngModel)]="dueDate" (ionChange)="getDueDate(dueDate)"></ion-datetime>
+    <ion-datetime displayFormat="DD/MM/YYYY" min="{{latest_date}}"      max="2050-10-31" pickerFormat="DD MM YYYY" [(ngModel)]="dueDate" (ionChange)="getDueDate(dueDate)"></ion-datetime>
   </ion-item>
 
 </ion-content>
