Worked On Post Details

--- a/src/pages/duedate/duedate.html
+++ b/src/pages/duedate/duedate.html
@@ -14,7 +14,7 @@
 
     <ion-item>
         <ion-label>Due Date</ion-label>
-        <ion-datetime displayFormat="DD/MM/YYYY" min="{{latest_date}}" max="2080-10-31" pickerFormat="DD MM YYYY" [(ngModel)]="dueDate" (ionChange)="getDueDate(dueDate)"></ion-datetime>
-      </ion-item>
+        <ion-datetime displayFormat="DD/MM/YYYY" min="2017-05-10" max="2080-10-31" pickerFormat="DD MM YYYY" [(ngModel)]="myDate" (ionChange)="getDueDate(myDate)"></ion-datetime>
+    </ion-item>
 
 </ion-content>
